<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/preferences">
        <EditTextPreference
            android:key="@string/PREFERENCES_ANDROID_IPADDRESS"
            android:title="@string/ipAddress"
            android:selectable="false"
            android:maxLines="1"
            />
        <EditTextPreference
            android:key="@string/PREFERENCES_IPADDRESS"
            android:title="@string/ipAddressOfYourComputer"
            android:maxLines="1"
            />
        <EditTextPreference
            android:key="@string/PREFERENCES_DCSPORT"
            android:inputType="number"
            android:digits="0123456789"
            android:maxLength="5"
            android:title="@string/dcsHostPort"
            android:maxLines="1"
            />
        <EditTextPreference
            android:key="@string/PREFERENCES_ANDROIDPORT"
            android:inputType="number"
            android:digits="0123456789"
            android:maxLength="5"
            android:title="@string/android_port"
            android:maxLines="1"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/stateConnection">
        <CheckBoxPreference
            android:id="@+id/connection"
            android:key="@string/PREFERENCES_CONNECTED"
            android:title="@string/notConnected"
            android:defaultValue="false"
            android:clickable="false"
            android:selectable="false"
            />
    </PreferenceCategory>
</PreferenceScreen>