<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.astazou.cockpitplusplus.activities.Guide_Activity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center"
            android:textAppearance="@style/PagerTabStripText"
            android:gravity="center"
            android:textSize="24sp"
            android:text="@string/app_name"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textAppearance="@style/PagerTabStripText"
            android:text="@string/subTitle"/>

        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:layout_gravity="center"
            android:textAppearance="@style/PagerTabStripText"
            android:layout_margin="4dp"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAppearance="@style/PagerTabStripText"
            android:layout_margin="4dp"
            android:textSize="12sp"
            android:text="@string/about_by_who"/>

        <ImageView
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="8dp"
            android:src="@mipmap/mirage_icon"
            android:contentDescription="@null"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/about_intro"/>

        <TextView
            android:id="@+id/thanks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:autoLink="web"
            android:clickable="true"
            android:text="@string/about_thanks"/>

        <TextView
            android:id="@+id/thanks_Huertix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:autoLink="web"
            android:clickable="true"
            android:text="@string/about_thanks_Huertix"/>

        <TextView
            android:id="@+id/thanks_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:autoLink="web"
            android:clickable="true"
            android:text="@string/about_thanks_photo"/>

        <TextView
            android:id="@+id/thanks_font"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:autoLink="web"
            android:clickable="true"
            android:text="@string/about_thanks_font"/>

        <TextView
            android:id="@+id/about_contributors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:autoLink="web"
            android:clickable="true"
            android:text="@string/about_contributors"/>

        <TextView
            android:id="@+id/thanks_github"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:autoLink="web"
            android:clickable="true"
            android:text="@string/about_github"/>

        <ImageView
            android:id="@+id/discord"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/discord"
            android:contentDescription="@null"/>

        <Button
            android:id="@+id/changelog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:padding="4dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/changelog"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </LinearLayout>
</ScrollView>
